feat: Implementar funcionalidades de gerenciamento de serviços e usuários, incluindo CRUD para serviços e usuários, além de dashboards para clientes e prestadores